# LuduScript

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ZMH.cpp  build.bat  build.sh  debug_lexer.cpp  debug_parser.cpp  example_output.json  poker_cards.json  src_main_Version2.cpp  test.json  test_file.txt  test_simple.txt  testfile  werewolf_cards.json
.github/workflows/: build-release.yml
docs/: API.md  SYNTAX.md  comprehensive_test_documentation.md  syntax.md
examples/: README.md  basic_syntax.script  doc_test.script  functions_and_loops.script  random_and_arrays.script  test_file.txt  test_simple.script  testfile.script
examples/in/: e1.gen  e10.gen  e1_simple_condition.gen  e3.gen  test_condition.gen  test_condition_return.gen  test_condition_simple.gen  test_condition_syntax.gen  test_direct_condition.gen  test_field_access.gen  test_init_block_condition.gen
include/: ast.h  interpreter.h  lexer.h  parser.h
output/: doc_test.json  doc_test_final.json  doc_test_fixed.json  example_Version2.script  final_advanced.json  final_basic.json  test_loops.json  test_random.json  test_simple_fixed.json
scripts/: comprehensive_test.gen  debug_block.gen  default_value_test.gen  error_test.gen  example.gen  generate_poker_deck.script  generate_poker_deck_en.gen  generate_werewolf_cards.script  simple_test.gen  test_block_init.gen  test_enhance_bonus.gen  test_hero_section.gen  test_number_types.gen  test_scope_issue.gen
src/: ast.cpp  interpreter.cpp  interpreter_stmt.cpp  lexer.cpp  main.cpp  parser.cpp  parser_expr.cpp
